--- a/AppData/NavigatorSettings.json
+++ b/AppData/NavigatorSettings.json
@@ -1,1 +1,1 @@
-{"ThreadCount": 24, "IsDEMChecked": true, "IsMATChecked": true, "IsNRGChecked": true, "IsUserConstraintChecked": true}
+{"ThreadCount": 24, "IsDEMChecked": true, "IsMATChecked": true, "IsNRGChecked": true, "IsUserConstraintChecked": false}
